[tool.poetry]
name = "weather"
version = "0.1.0"
description = ""
authors = ["dariadeev <dariadeev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
seaborn = "^0.13.2"
streamlit = "^1.41.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
